{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 17,
  "lineage": "aea78678-6b7d-c81e-38d5-e61748718980",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "booklist_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2b8ca1dad447f8a",
            "arn": "arn:aws:ec2:us-east-1:590183695691:instance/i-044d2343708766ae8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-044d2343708766ae8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05c7714186211822e",
            "private_dns": "ip-10-0-1-149.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.149",
            "public_ip": "3.83.221.232",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04548a35b9082b82a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0be62a95bbb1a0017",
            "tags": {
              "Name": "booklist-manager-instance"
            },
            "tags_all": {
              "Name": "booklist-manager-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d360a92e174f79f9"
            ]
          },
          "dependencies": [
            "aws_security_group.booklist_sg",
            "aws_subnet.booklist_subnet",
            "aws_vpc.booklist_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "booklist_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183695691:internet-gateway/igw-0ecd07fe6b581ec96",
            "id": "igw-0ecd07fe6b581ec96",
            "owner_id": "590183695691",
            "tags": {
              "Name": "booklist-igw"
            },
            "tags_all": {
              "Name": "booklist-igw"
            },
            "vpc_id": "vpc-0e75d6fdb2bbed3bd"
          },
          "dependencies": [
            "aws_vpc.booklist_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "booklist_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183695691:route-table/rtb-048bd5e1a308ce87a",
            "id": "rtb-048bd5e1a308ce87a",
            "owner_id": "590183695691",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ecd07fe6b581ec96",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "booklist-rt"
            },
            "tags_all": {
              "Name": "booklist-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e75d6fdb2bbed3bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.booklist_igw",
            "aws_vpc.booklist_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "booklist_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0248bed19e2cc97da",
            "route_table_id": "rtb-048bd5e1a308ce87a",
            "subnet_id": "subnet-0be62a95bbb1a0017"
          },
          "dependencies": [
            "aws_internet_gateway.booklist_igw",
            "aws_route_table.booklist_rt",
            "aws_subnet.booklist_subnet",
            "aws_vpc.booklist_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "booklist_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183695691:security-group/sg-0d360a92e174f79f9",
            "description": "Allow SSH, HTTP, and port 5000 for Node app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d360a92e174f79f9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "booklist-sg",
            "name_prefix": "",
            "owner_id": "590183695691",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "booklist-sg"
            },
            "tags_all": {
              "Name": "booklist-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e75d6fdb2bbed3bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.booklist_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "booklist_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183695691:subnet/subnet-0be62a95bbb1a0017",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be62a95bbb1a0017",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183695691",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "booklist-subnet"
            },
            "tags_all": {
              "Name": "booklist-subnet"
            },
            "vpc_id": "vpc-0e75d6fdb2bbed3bd"
          },
          "dependencies": [
            "aws_vpc.booklist_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "booklist_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183695691:vpc/vpc-0e75d6fdb2bbed3bd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03d0728f5847187af",
            "default_route_table_id": "rtb-00b4f0fe3f86918bb",
            "default_security_group_id": "sg-0b351a332b7a297fe",
            "dhcp_options_id": "dopt-05bdb66f909ef5544",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e75d6fdb2bbed3bd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00b4f0fe3f86918bb",
            "owner_id": "590183695691",
            "tags": {
              "Name": "booklist-vpc"
            },
            "tags_all": {
              "Name": "booklist-vpc"
            }
          }
        }
      ]
    }
  ]
}